# huffmanocool

./: .gitignore  CMakeLists.txt  README.md  argdefs.c  assist.c  bytetable.c  chartable.c  fileloader.c  gen_ascii.c  huffmanstructs.c  huffmanstructsdebug.c  hufstack.c  listbuilder.c  main.c  packing.c  sort.c  stdoutdebug.c  tests_argdefs.c  tests_fileloader.c  tests_stdoutdebug.c  treebuilder.c
assets/: expected.txt  small.txt
examples/: unity_test_01.c
include/: argdefs.h  assist.h  bytetable.h  chartable.h  debug.h  fileio.h  fileloader.h  globals.h  huffmanstructs.h  huffmanstructsdebug.h  hufstack.h  listbuilder.h  packing.h  sort.h  stdoutdebug.h  treebuilder.h  unpacking.h
plot/: CMakeLists.txt  Plot.txt  R_plot.txt  plot  plot.c  plot.r  plot_structs.h
src/: argdefs.c  assist.c  bytetable.c  debug.c  fileio.c  fileloader.c  gen_ascii.c  huffmanstructs.c  huffmanstructsdebug.c  packing.c  sort.c  stdoutdebug.c  unpacking.c
